new_tests/semantics/type/bad/068_ED3.cm

def WEEKS type = {MON=1,TUES=2,WEDS=3,THURS='d',FRI=5}
